# project-secfilecache

./: pyproject.toml
foobar_secfilecache.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
project/: secfilecache.py
